--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lru-cache": "^10.2.2",
     "next": "14.2.3",
     "node": "^18.20.3",
     "react": "^18",
